--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.45.0
   flutter_svg: ^1.0.3
+  flutter_blue: ^0.8.0
 
 dev_dependencies:
   flutter_test:
